edited font family in .p class

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,6 +1,6 @@
 .p {
     background: #ff9999;
-    font-family: Verdana DejaVu Sans sans-serif;
+    font-family: Verdana, "DejaVu Sans", sans-serif;
 }
 
 
